cmd/config/anp-density-pods/pod-reader-pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-reader
  labels:
    app: pod-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-reader
  template:
    metadata:
      labels:
        app: pod-reader
    spec:
      serviceAccountName: pod-reader
      containers:     
      - name: pod-reader
        image: quay.io/openshift-psap-qe/pod-reader
        imagePullPolicy: Always
        volumeMounts:
          - name: vol-www-data
            mountPath: /usr/share/nginx/html      
        securityContext:
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          #runAsUser: 1000800000
          capabilities:
            drop:
            - ALL
        ports:
          - name: http-port
            containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
      volumes:
        - name: vol-www-data
          emptyDir: {}
