cmd/config/anp-density-pods/pod-reader-service.yml
kind: Service
apiVersion: v1
metadata:
  name: pod-reader-service
spec:
  selector:
    app: pod-reader  
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
